--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <title>My App</title>
 </head>
 <body>
-    This is my app!
+ <div id="div-app">
+  <form>
+   <fieldset>
+    <legend>Personal Info</legend>
+   </fieldset>
+  </form>
+ </div>
+    
 </body>
 </html>
